完成管理员系统功能：建议管理、用户管理、快速回复、权限控制
主要功能：
1. 建议管理系统 - 快速回复、状态管理、实时更新
2. 用户管理系统 - 状态控制、会员管理、角色管理
3. 权限控制系统 - 管理员/普通用户权限分离
4. 操作日志系统 - 完整的管理操作记录
5. 前端界面优化 - 模态框、按钮组、响应式设计

技术实现：
- Django Admin装饰器权限控制
- 用户角色、状态、会员模型
- AJAX异步请求和实时更新
- Bootstrap模态框和响应式UI
- CSRF令牌保护和操作审计

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.18
 django-ranged-response==0.2.0
 django-simple-captcha==0.6.1
 djangorestframework==3.15.2
+django-ratelimit==4.1.0
 fonttools==4.55.8
 frozendict==2.4.6
 gunicorn==23.0.0
@@ -26,21 +27,25 @@ packaging==24.2
 pandas==2.2.3
 peewee==3.17.9
 pillow==11.1.0
+pillow-heif==1.0.0
 platformdirs==4.3.6
 prettytable==3.14.0
 pyecharts==2.0.8
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+ratelimit==2.2.1
 requests==2.32.3
 simplejson==3.19.3
 six==1.17.0
 soupsieve==2.6
 sqlparse==0.5.3
+tenacity==9.1.2
 typing_extensions==4.12.2
 tzdata==2025.1
-urllib3==2.3.0
+urllib3==1.26.18
 wcwidth==0.2.13
 webencodings==0.5.1
+xmind==1.2.0
 yfinance==0.2.52
 zipp==3.21.0
